# teck

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
Teck/models/: monitor.py  monitor_darwin.py  monitor_windows.py  teck.py
Teck/utils/: active_window_detector.py  applications.py  buttons.py  images.py
config/: Darwin.demo.yaml  button_display.py  logger.py  macos.demo.yaml  settings.py
tests/: test_buttons.py
